# agentic-search

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agentic_search/: __init__.py  config.py  contracts.py  evaluation.py  graph.py  llm_adapters.py  main.py  orchestrator.py  schema.py  selective_gen_trainer.py  state.py
src/agentic_search/agents/: __init__.py  abstain.py  drafter.py  planner.py  query_rewriter.py  search_fanout.py  selective_gen.py  sufficient_context.py  synthesizer.py
src/agentic_search/autorater/: __init__.py  calibration.py
src/agentic_search/prompts/: __init__.py
src/agentic_search/retrieval/: __init__.py  base.py  grep_retriever.py  rag_retriever.py
src/agentic_search/utils/: __init__.py  confidence.py  retry.py
tests/: test_autorater_calibration.py  test_complete_loop.py  test_evaluation.py  test_orchestrator.py  test_schema.py  test_selective_gen_trainer.py
