[project]
name = "agentic-search"
version = "0.1.0"
description = "Complete Google Agentic RAG implementation with Sufficient Context Agent"
authors = []
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "tenacity>=8.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.30"]
flame = ["transformers>=4.40", "torch>=2.0"]
grep = ["ripgrep>=0.6"]
web = ["httpx>=0.27", "beautifulsoup4>=4.12"]
all = [
    "agentic-search[gemini]",
    "agentic-search[openai]",
    "agentic-search[flame]",
    "agentic-search[grep]",
    "agentic-search[web]",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
strict = false
enable_error_code = ["ignore-without-code"]
